--- a/front/index.html
+++ b/front/index.html
@@ -5,14 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Bitlace</title>
   </head>
-  <body class="bg-neutral-900">
+  <body class="bg-neutral-600">
     <div class="flex flex-col items-center min-h-screen justify-center gap-5">
-      <p class="text-mono text-8xl text-white">BitLace</p>
-      <div class="flex flex-row items-center gap-2">
+      <p class="text-mono text-8xl text-white">Bitlace</p>
+      <div class="flex flex-row items-center gap-3">
         <img
           src="/src/assets/gluten.svg"
           alt="Glutesha logo"
-          class="size-10 animate-spin-slow"
+          class="size-10"
         />
         <p class="text-mono text-3xl text-white">By Glutesha Devices</p>
       </div>
