--- a/front/index.html
+++ b/front/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Bitlace</title>
+    <link rel="icon" type="image/x-icon" href="./favicon.ico">
   </head>
   <body class="bg-neutral-600">
       <div id="app"></div>
