--- a/front/index.html
+++ b/front/index.html
@@ -7,6 +7,16 @@
     <link rel="icon" type="image/x-icon" href="./favicon.ico">
   </head>
   <body class="bg-neutral-600">
+      <div class="flex flex-col items-center min-h-screen justify-center font-mono gap-5">
+          <p class="text-7xl font-bold text-white">Bitlace</p>
+          <div class="flex flex-row items-center gap-3">
+            <img
+              src="/src/main/assets/gluten.svg"
+              alt="Glutesha logo"
+              class="size-10"
+            />
+            <p class="text-2xl text-white">By Glutesha Devices</p>
+      </div>
       <div id="app"></div>
       <script type="module" src="/src/main/main.ts"></script>
     </div>
