--- a/front/settings/index.html
+++ b/front/settings/index.html
@@ -9,7 +9,7 @@
     </head>
     <body class="bg-neutral-600 flex justify-center">
         <div class="flex justify-center p-20">
-            <form class="flex flex-col gap-4 font-mono text-2xl text-white">
+            <form action="/api/settings" class="flex flex-col gap-4 font-mono text-2xl text-white">
                 <p class="text-3xl font-bold text-center py-5">Settings</p>
                 <div class="flex flex-col gap-2 font-mono bg-neutral-700 p-5 rounded-2xl">
                     <p class="text-2xl text-center">WiFi</p>
