--- a/front/settings/index.html
+++ b/front/settings/index.html
@@ -6,6 +6,7 @@
         <title>Settings</title>
         <link href="styles.css" rel="stylesheet">
         <link rel="icon" type="image/x-icon" href="../favicon.ico">
+        <script type="module" src="load.js" defer></script>
     </head>
     <body class="bg-neutral-600 flex justify-center">
         <div class="flex justify-center p-20">
@@ -51,17 +52,7 @@
                     </select>
                     <div class="flex flex-col">
                         <label>// Brightness</label>
-                        <select id="brightness" name="brightness" class="bg-neutral-800 p-2 rounded-xl"></select>
-                        <script>
-                            const brightness = document.getElementById('brightness');
-
-                            for (let i = 1; i <= 10; i++) {
-                                const option = document.createElement('option');
-                                option.value = i;
-                                option.textContent = i;
-                                brightness.appendChild(option);
-                            }
-                        </script>
+                        <input type="range" id="brightness" name="brightness" min="0" max="10" value="1">
                     </div>
                     <label>// Pins</label>
                     <div class="flex flex-row gap-10">
