--- a/front/settings/index.html
+++ b/front/settings/index.html
@@ -13,7 +13,7 @@
             <form action="/api/settings" class="flex flex-col gap-4 font-mono text-2xl text-white">
                 <p class="text-3xl font-bold text-center pb-1">Settings</p>
                 <div class="flex flex-col gap-2 font-mono bg-neutral-900 shadow-2xl shadow-black p-5 rounded-2xl">
-                    <p class="text-2xl text-center">WiFi</p>
+                    <p class="text-2xl text-center">// WiFi</p>
                     <label>// SSID</label>
                     <input class="bg-neutral-800 rounded-2xl focus:outline-none border-3 border-neutral-700 focus:bg-neutral-700 text-white text-2xl px-2 py-2" type="text" id="ssid" name="ssid">
                     <label>// Password</label>
@@ -40,7 +40,7 @@
                     </div>
                 </div>
                 <div class="flex flex-col gap-2 font-mono bg-neutral-900 shadow-2xl shadow-black p-5 rounded-2xl">
-                    <p class="text-2xl text-center">Display</p>
+                    <p class="text-2xl text-center">// Display</p>
                     <label>// Color (Interface) </label>
                     <select id="color" name="color" class="bg-neutral-800 p-2 rounded-xl">
                         <option>red</option>
@@ -55,7 +55,7 @@
                         <input type="range" id="brightness" name="brightness" min="0" max="10" value="1">
                     </div>
                     <label>// Pins</label>
-                    <div class="flex flex-row gap-10">
+                    <div class="flex flex-row gap-15 justify-center">
                             <div class="flex flex-col">
                                 <label class="text-gray-400">DATA</label>
                                 <select id="data" name="data" class="bg-neutral-800 p-2 rounded-xl"></select>
@@ -99,6 +99,39 @@
                                 </script>
                         </div>
                     </div>
+                </div>
+                <div class="flex flex-col gap-2 font-mono bg-neutral-900 shadow-2xl shadow-black p-5 rounded-2xl">
+                    <p class="text-center">// Device pins</p>
+                        <div class="flex flex-row gap-10 justify-center">
+                            <div class="flex flex-col">
+                                <label class="text-gray-400">Battery</label>
+                                <select id="battery" name="battery" class="bg-neutral-800 p-2 rounded-xl"></select>
+                                <script>
+                                    const battery = document.getElementById('battery');
+
+                                    for (let i = 1; i <= 21; i++) {
+                                        const option = document.createElement('option');
+                                        option.value = i;
+                                        option.textContent = i;
+                                        battery.appendChild(option);
+                                    }
+                                </script>
+                            </div>
+                            <div class="flex flex-col">
+                                <label class="text-gray-400">Button</label>
+                                <select id="button" name="button" class="bg-neutral-800 p-2 rounded-xl"></select>
+                                <script>
+                                    const button = document.getElementById('button');
+
+                                    for (let i = 1; i <= 21; i++) {
+                                        const option = document.createElement('option');
+                                        option.value = i;
+                                        option.textContent = i;
+                                        button.appendChild(option);
+                                    }
+                                </script>
+                            </div>
+                        </div>
                 </div>
                 <input value="Apply (Reboot)" type="submit" class="shadow-2xl shadow-black bg-red-500 hover:bg-red-600 active:bg-red-700 rounded-2xl text-2xl text-mono font-bold text-white py-2">
             </form>
