--- a/front/settings/index.html
+++ b/front/settings/index.html
@@ -54,84 +54,94 @@
                         <label>// Brightness</label>
                         <input type="range" id="brightness" name="brightness" min="0" max="10" value="1">
                     </div>
-                    <label>// Pins</label>
-                    <div class="flex flex-row gap-15 justify-center">
-                            <div class="flex flex-col">
-                                <label class="text-gray-400">DATA</label>
-                                <select id="data" name="data" class="bg-neutral-800 p-2 rounded-xl"></select>
-                                <script>
-                                    const data = document.getElementById('data');
+                    
+                    <div class="flex flex-col">
+                        <p class="justify-center">// Pins</p>
+                        <div class="flex flex-row gap-15">
+                                <div class="flex flex-col">
+                                    <label class="text-gray-400">DATA</label>
+                                    <select id="data" name="data" class="bg-neutral-800 p-2 rounded-xl"></select>
+                                    <script>
+                                        const data = document.getElementById('data');
 
-                                    for (let i = 1; i <= 21; i++) {
-                                        const option = document.createElement('option');
-                                        option.value = i;
-                                        option.textContent = i;
-                                        data.appendChild(option);
-                                    }
-                                </script>
+                                        for (let i = 1; i <= 21; i++) {
+                                            const option = document.createElement('option');
+                                            option.value = i;
+                                            option.textContent = i;
+                                            data.appendChild(option);
+                                        }
+                                    </script>
+                                </div>
+                                <div class="flex flex-col">
+                                    <label class="text-gray-400">CLK</label>
+                                    <select id="clk" name="clk" class="bg-neutral-800 p-2 rounded-xl"></select>
+                                    <script>
+                                        const clk = document.getElementById('clk');
+
+                                        for (let i = 1; i <= 21; i++) {
+                                            const option = document.createElement('option');
+                                            option.value = i;
+                                            option.textContent = i;
+                                            clk.appendChild(option);
+                                        }
+                                    </script>
+                                </div>
+                                <div class="flex flex-col">
+                                    <label class="text-gray-400">CS</label>
+                                    <select id="cs" name="cs" class="bg-neutral-800 p-2 rounded-xl"></select>
+                                    <script>
+                                        const cs = document.getElementById('cs');
+
+                                        for (let i = 1; i <= 21; i++) {
+                                            const option = document.createElement('option');
+                                            option.value = i;
+                                            option.textContent = i;
+                                            cs.appendChild(option);
+                                        }
+                                    </script>
                             </div>
-                            <div class="flex flex-col">
-                                <label class="text-gray-400">CLK</label>
-                                <select id="clk" name="clk" class="bg-neutral-800 p-2 rounded-xl"></select>
-                                <script>
-                                    const clk = document.getElementById('clk');
-
-                                    for (let i = 1; i <= 21; i++) {
-                                        const option = document.createElement('option');
-                                        option.value = i;
-                                        option.textContent = i;
-                                        clk.appendChild(option);
-                                    }
-                                </script>
-                            </div>
-                            <div class="flex flex-col">
-                                <label class="text-gray-400">CS</label>
-                                <select id="cs" name="cs" class="bg-neutral-800 p-2 rounded-xl"></select>
-                                <script>
-                                    const cs = document.getElementById('cs');
-
-                                    for (let i = 1; i <= 21; i++) {
-                                        const option = document.createElement('option');
-                                        option.value = i;
-                                        option.textContent = i;
-                                        cs.appendChild(option);
-                                    }
-                                </script>
                         </div>
-                    </div>
+                    </div> 
                 </div>
                 <div class="flex flex-col gap-2 font-mono bg-neutral-900 shadow-2xl shadow-black p-5 rounded-2xl">
-                    <p class="text-center">// Device pins</p>
-                        <div class="flex flex-row gap-10 justify-center">
-                            <div class="flex flex-col">
-                                <label class="text-gray-400">Battery</label>
-                                <select id="battery" name="battery" class="bg-neutral-800 p-2 rounded-xl"></select>
-                                <script>
-                                    const battery = document.getElementById('battery');
+                    <p class="text-center">// Device</p>
+                        <div class="flex flex-col justify-center">
+                            <p>// Pins</p>
+                            <div class="flex flex-row gap-10">
+                                <div class="flex flex-col">
+                                    <label class="text-gray-400">Battery</label>
+                                    <select id="battery" name="battery" class="bg-neutral-800 p-2 rounded-xl"></select>
+                                    <script>
+                                        const battery = document.getElementById('battery');
 
-                                    for (let i = 1; i <= 21; i++) {
-                                        const option = document.createElement('option');
-                                        option.value = i;
-                                        option.textContent = i;
-                                        battery.appendChild(option);
-                                    }
-                                </script>
-                            </div>
-                            <div class="flex flex-col">
-                                <label class="text-gray-400">Button</label>
-                                <select id="button" name="button" class="bg-neutral-800 p-2 rounded-xl"></select>
-                                <script>
-                                    const button = document.getElementById('button');
+                                        for (let i = 1; i <= 21; i++) {
+                                            const option = document.createElement('option');
+                                            option.value = i;
+                                            option.textContent = i;
+                                            battery.appendChild(option);
+                                        }
+                                    </script>
+                                </div>
+                                <div class="flex flex-col">
+                                    <label class="text-gray-400">Button</label>
+                                    <select id="button" name="button" class="bg-neutral-800 p-2 rounded-xl"></select>
+                                    <script>
+                                        const button = document.getElementById('button');
 
-                                    for (let i = 1; i <= 21; i++) {
-                                        const option = document.createElement('option');
-                                        option.value = i;
-                                        option.textContent = i;
-                                        button.appendChild(option);
-                                    }
-                                </script>
+                                        for (let i = 1; i <= 21; i++) {
+                                            const option = document.createElement('option');
+                                            option.value = i;
+                                            option.textContent = i;
+                                            button.appendChild(option);
+                                        }
+                                    </script>
+                                </div>
                             </div>
                         </div>
+                        <div class="flex flex-col gap-2 justify-center">
+                            <p>// Battery Resistance</p>
+                            <input class="bg-neutral-800 rounded-2xl focus:outline-none border-3 border-neutral-700 focus:bg-neutral-700 text-white text-2xl px-2 py-2" type="text" id="resistance" name="resistance">
+                        </div>  
                 </div>
                 <input value="Apply (Reboot)" type="submit" class="shadow-2xl shadow-black bg-red-500 hover:bg-red-600 active:bg-red-700 rounded-2xl text-2xl text-mono font-bold text-white py-2">
             </form>
