Battery indicator DONE

--- a/front/settings/index.html
+++ b/front/settings/index.html
@@ -139,7 +139,7 @@
                             </div>
                         </div>
                         <div class="flex flex-col gap-2 justify-center">
-                            <p>// Battery Resistance</p>
+                            <p>// Resistance Ratio</p>
                             <input class="bg-neutral-800 rounded-2xl focus:outline-none border-3 border-neutral-700 focus:bg-neutral-700 text-white text-2xl px-2 py-2" type="text" id="resistance" name="resistance">
                         </div>  
                 </div>
