--- a/front/index.html
+++ b/front/index.html
@@ -6,7 +6,7 @@
     <title>Bitlace</title>
     <link rel="icon" type="image/x-icon" href="./favicon.ico">
   </head>
-  <body class="bg-neutral-800">
+  <body class="bg-neutral-800 touch-none select-none overscroll-none">
       <div id="app"></div>
       <script type="module" src="/src/main/main.ts"></script>
     </div>
