--- a/front/settings/index.html
+++ b/front/settings/index.html
@@ -41,7 +41,7 @@
                 </div>
                 <div class="flex flex-col gap-2 font-mono bg-neutral-900 shadow-2xl shadow-black p-5 rounded-2xl">
                     <p class="text-2xl text-center">// Display</p>
-                    <div class="flex flex-row gap-30 justify-center">
+                    <div class="flex flex-row gap-20 justify-center">
                         <div class="flex flex-col">
                             <label>// Color</label>
                             <select id="color" name="color" class="bg-neutral-800 p-2 rounded-xl">
@@ -55,7 +55,7 @@
                         </div>
                         <div class="flex flex-col">
                             <label>// Flip </label>
-                            <input class="flex-1" id="flip" type="checkbox">
+                            <input class="h-10" id="flip" type="checkbox">
                         </div>
                     </div>
                     <div class="flex flex-col">
